Fix relative path.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <!--
     <script type="text/javascript" src="gl-matrix.js"></script>
 -->
-<script type="text/javascript" src="/webgl-render/app.js"></script>
+<script type="text/javascript" src="/mekkisite/webgl-render/app.js"></script>
 
 <title>mekkisite</title>
 </head>
