--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 <script id="shader-fs" type="x-shader/x-fragment">
     precision mediump float;
 
