Load jquery minified

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+<script
+  src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+  integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
+  crossorigin="anonymous">
+</script>
 <script src = "/path/to/clientside-require.js"></script>
 <script>
     var promise_request = load("clientside-request") // loads the `clientside-request` npm package
