Use bundle.js in index.html.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <!--
     <script type="text/javascript" src="gl-matrix.js"></script>
 -->
-<script type="text/javascript" src="/mekkisite/webgl-render/app.js"></script>
+<script type="text/javascript" src="/mekkisite/build/bundle.js"></script>
 
 <title>mekkisite</title>
 </head>
