Install bunch of new npm packages. Now retest with index.js to draw tutorial triangle. Use browserify-shader to be able to require shader files in js.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
 <!--
     <script type="text/javascript" src="gl-matrix.js"></script>
 -->
-<script type="text/javascript" src="/mekkisite/build/bundle.js"></script>
 
 <title>mekkisite</title>
 </head>
@@ -45,8 +44,9 @@
 <body>
     
     <canvas id="glCanvas" width="640" height="480"></canvas>
-
+    
 </body>
 
+<script type="text/javascript" src="./build/bundle.js"></script>
 
 </html>
