Install bunch of new npm packages. Now retest with index.js to draw tutorial triangle. Use browserify-shader to be able to require shader files in js.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-<script id="shader-fs" type="x-shader/x-fragment">
+<!--<script id="shader-fs" type="x-shader/x-fragment">
     precision mediump float;
 
     varying vec2 vTextureCoord;
@@ -34,6 +34,7 @@
         vTransformedNormal = uNMatrix * aVertexNormal;
     }
 </script>
+-->
 <!--
     <script type="text/javascript" src="gl-matrix.js"></script>
 -->
@@ -46,7 +47,7 @@
     <canvas id="glCanvas" width="640" height="480"></canvas>
     
 </body>
-
 <script type="text/javascript" src="./build/bundle.js"></script>
+
 
 </html>
